@@ -5,5 +5,7 @@ v0.5.1
     you can override the server profile if you need the old (and uncorrect)
     behaviour when connecting to a Redis 1.2.0 instance.
 
+  * Added missing support for BGREWRITEAOF for Redis >= 1.2.0
+
 v0.5.0
   * First versioned release of Predis
